--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Open Sans', sans-serif;
-  background: rgba(0, 0, 0, 0.05);
+  background: #5175F1;
 }
 
 html {
@@ -42,8 +42,8 @@ html {
   font-size: 38px;
 }
 
-.title {
-  font-size: 42px;
+h1 {
+  color: white;
 }
 
 .content {
